Moved images to images folder and updated image paths

--- a/parallax project/index.html
+++ b/parallax project/index.html
@@ -1,121 +1,130 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
-    <link rel="stylesheet" href="styles.css">
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.6.0/css/all.min.css">
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-<link href="https://fonts.googleapis.com/css2?family=Marck+Script&family=Momo+Trust+Display&display=swap" rel="stylesheet">
-
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>MNTN | Adventure Awaits</title>
+  <link rel="stylesheet" href="styles.css">
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.6.0/css/all.min.css">
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link href="https://fonts.googleapis.com/css2?family=Marck+Script&family=Momo+Trust+Display&display=swap" rel="stylesheet">
 </head>
+
 <body>
-    <nav>
-        <div class="navbar">
-            <div class="logo">
-                <h1>MNTN</h1>
-            </div>
-            <div class="navigation">
-                <ul>
-                    <li>Equipment</li>
-                    <li>About us</li>
-                    <li>Blog</li>
-                </ul>
-            </div>
-            <div class="account">
-                <i class="fa-solid fa-user"></i>
-                <p>Account</p>
+  <nav>
+    <div class="navbar">
+      <div class="logo">
+        <h1>MNTN</h1>
+      </div>
+      <div class="navigation">
+        <ul>
+          <li>Equipment</li>
+          <li>About us</li>
+          <li>Blog</li>
+        </ul>
+      </div>
+      <div class="account">
+        <i class="fa-solid fa-user"></i>
+        <p>Account</p>
+      </div>
+    </div>
+  </nav>
 
-            </div>
-        </div>
-    </nav>
-    <section>
-        <div class="parallax">
-            <div class="prlx">
-                <img src="cloud.png" id="cloud">
-                <img src="mountain.png" id="mountain">
-                <h2 id="text">Be prepared for the <br> Mountains and beyond!</h2>
-                <img src="grass.png" id="grass">
-            </div>
-        </div>
+  <section>
+    <div class="parallax">
+      <div class="prlx">
+        <img src="images/cloud.png" id="cloud" alt="cloud">
+        <img src="images/mountain.png" id="mountain" alt="mountain">
+        <h2 id="text">Be prepared for the <br> Mountains and beyond!</h2>
+        <img src="images/grass.png" id="grass" alt="grass">
+      </div>
+    </div>
+  </section>
 
-    </section>
-    <section class="bckmain">
-        <div class="background">
-            <img src="BG Content (1).svg" alt="">
-        </div>
-        <div class="level1">
-            <div class="left">
-                <div class="opacity"><h1>01</h1></div>
-                <h3>GET STARTED</h3>
-                <h2>What level of  hiker are you?</h2>
-                <h4>Determining what level of hiker you are can be an important tool when planning future hikes. This hiking level guide will help you plan hikes according to different hike ratings set by various websites like All Trails and Modern Hiker. What type of hiker are you – novice, moderate, advanced moderate, expert, or expert backpacker? </h4>
-                <h3>read more</h3>
-            </div>
-            <div class="photo">
-                <img src="01.svg" alt="climb photo">
-            </div>
-        </div>
-        <div class="level1">
-            <div class="photo">
-                <img src="01 (2).svg" alt="">
-            </div>
-            <div class="left">
-              <div class="secondopacity">
-                  <h1>02</h1>
-              </div>
-            <h3>Hiking Essentials</h3>
-            <h2>Picking the right Hiking Gear!</h2>
-            <h4>The nice thing about beginning hiking is that you don’t really need any special gear, you can probably get away with things you already have.
-                Let’s start with clothing. A typical mistake hiking beginners make is wearing jeans and regular clothes, which will get heavy and chafe wif they get sweaty or wet.</h4>
-            <h3>read more</h3>
-        </div>
-        </div>
-        <div class="level1">
-            <div class="left">
-                <div class="opacity"><h1>03</h1></div>
-                <h3>where you go is the key</h3>
-                <h2>Understand Your Map & Timing</h2>
-                <h4>To start, print out the hiking guide and map. If it’s raining, throw them in a Zip-Lock bag. Read over the guide, study the map, and have a good idea of what to expect. I like to know what my next landmark is as I hike. For example, I’ll read the guide and know that say, in a mile, I make a right turn at the junction.. </h4>
-                <h3>read more</h3>
-            </div>
-            <div class="photo">
-                <img src="03.jpg" alt="climb photo">
-            </div>
-        </div>
-    </section>
-    <footer>
-        <div class="mainfoot">
-            <div class="first">
-                <h1>MNTN</h1>
-                <P>Get out there & discover your next <br> slope, mountain & destination!</P>
-            </div>
-            <div class="second">
-                <h3>More on The Blog</h3>
-                <ul>
-                    <li>About MNTN</li>
-                    <li>Contributors & Writers</li>
-                    <li>Write For Us</li>
-                    <li>Contact Us</li>
-                    <li>Privacy Policy</li>
-                </ul>
-            </div>
-            <div class="third">
-                <h3>More on MNTN</h3>
-                <ul>
-                    <li>The Team</li>
-                    <li>Jobs</li>
-                    <li>Press</li>
-                </ul>
-            </div>
-        </div>
-    </footer>
+  <section class="bckmain">
+    <div class="background">
+      <img src="images/BG Content (1).svg" alt="background">
+    </div>
 
+    <div class="level1">
+      <div class="left">
+        <div class="opacity"><h1>01</h1></div>
+        <h3>GET STARTED</h3>
+        <h2>What level of hiker are you?</h2>
+        <h4>
+          Determining what level of hiker you are can be an important tool when planning future hikes.
+          This hiking level guide will help you plan hikes according to different hike ratings set by various websites
+          like All Trails and Modern Hiker. What type of hiker are you – novice, moderate, advanced moderate, expert, or expert backpacker?
+        </h4>
+        <h3>read more</h3>
+      </div>
+      <div class="photo">
+        <img src="images/01.svg" alt="climb photo">
+      </div>
+    </div>
 
+    <div class="level1">
+      <div class="photo">
+        <img src="images/01 (2).svg" alt="hiking gear">
+      </div>
+      <div class="left">
+        <div class="secondopacity"><h1>02</h1></div>
+        <h3>Hiking Essentials</h3>
+        <h2>Picking the right Hiking Gear!</h2>
+        <h4>
+          The nice thing about beginning hiking is that you don’t really need any special gear, you can probably get away with things you already have.
+          Let’s start with clothing. A typical mistake hiking beginners make is wearing jeans and regular clothes, which will get heavy and chafe if they get sweaty or wet.
+        </h4>
+        <h3>read more</h3>
+      </div>
+    </div>
 
+    <div class="level1">
+      <div class="left">
+        <div class="opacity"><h1>03</h1></div>
+        <h3>where you go is the key</h3>
+        <h2>Understand Your Map & Timing</h2>
+        <h4>
+          To start, print out the hiking guide and map. If it’s raining, throw them in a Zip-Lock bag.
+          Read over the guide, study the map, and have a good idea of what to expect. I like to know what my next landmark is as I hike.
+          For example, I’ll read the guide and know that say, in a mile, I make a right turn at the junction.
+        </h4>
+        <h3>read more</h3>
+      </div>
+      <div class="photo">
+        <img src="images/03.jpg" alt="mountain view">
+      </div>
+    </div>
+  </section>
 
-<script src="script.js"></script>
+  <footer>
+    <div class="mainfoot">
+      <div class="first">
+        <h1>MNTN</h1>
+        <p>Get out there & discover your next <br> slope, mountain & destination!</p>
+      </div>
+      <div class="second">
+        <h3>More on The Blog</h3>
+        <ul>
+          <li>About MNTN</li>
+          <li>Contributors & Writers</li>
+          <li>Write For Us</li>
+          <li>Contact Us</li>
+          <li>Privacy Policy</li>
+        </ul>
+      </div>
+      <div class="third">
+        <h3>More on MNTN</h3>
+        <ul>
+          <li>The Team</li>
+          <li>Jobs</li>
+          <li>Press</li>
+        </ul>
+      </div>
+    </div>
+  </footer>
+
+  <script src="script.js"></script>
 </body>
 </html>
